# Homework_Django_Gogol_Maksim

./: .gitignore  catalog.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: load_catalog.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_alter_contact_options.py
catalog/templates/catalog/: base.html  category_products.html  contact.html  create_product.html  home.html  navbar.html  product_detail.html
catalog/templatetags/: image_filter.py
config/: settings.py  urls.py
