[tool.poetry]
name = "homework-django-gogol-maksim"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
black = "^24.10.0"
pillow = "^11.0.0"
psycopg2-binary = "^2.9.10"
ipython = "^8.29.0"
django-pagination = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
